--- a/Portfolio/portfolio/package.json
+++ b/Portfolio/portfolio/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
-    "next": "15.4.5",
+    "next": "^15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
